fixed position post btn appear on mobile view

--- a/src/style/_layout-main.scss
+++ b/src/style/_layout-main.scss
@@ -158,3 +158,15 @@ $right-sidebar-width-sml: 250px;
   border-radius: 15px;
   padding: $padding-sml;
 }
+
+// fixed post position button that only appears on mobile
+.mobile-post-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none !important;
+
+  @media (max-width: 780px) {
+    display: flex !important;
+  }
+}
